# c-address-book-pro

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  cppcheck-report.txt
include/: address_book.h  contact_helper.h
src/: address_book.c  contact_helper.c  main.c
test/: CMakeLists.txt  test_initialize.c
